Getting metadata from v2 create or get metadata call responds with content type as well
